<resources>
    <string name="app_name">dca</string>
    <string name="title_activity_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">care</string>
    <string name="nav_header_subtitle">biometrics@dca.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="content_authority">com.alphabank.dca</string>
    <string name="sync_account_type">dca.alphabank.com</string>
    <string name="households">Households</string>
    <string name="alternates">Alternates</string>
    <string name="attendance">Attendance</string>
    <string name="payments">Payments</string>
    <string name="reports">Reports</string>
    <string name="targetLocation">Registration Set up</string>
    <string name="btn_location">Start Registration</string>
    <string name="personal_information">Personal Information Registration</string>
    <string name="household_name">Household Name</string>
    <string name="age">Age</string>
    <string name="id_no">Id Number</string>
    <string name="phonenumber">Phonenumber(09********)</string>
    <string name="start_work">Start of Work</string>
    <string name="average_income">Monthly Average Income</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="spouse">Spouse Name</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="legal_status">Legal Status</string>
    <string name="marital_status">Marital Status</string>
    <string name="household_size">Household Size</string>
    <string name="back">Back</string>
    <string name="male_dependants">Male Dependants</string>
    <string name="female_dependants">Female Dependants</string>
    <string name="zero_five">0-5 yrs Old</string>
    <string name="six_seventeen">6-17 yrs Old</string>
    <string name="eighteen_forty_five">18-45 yrs Old</string>
    <string name="forty_six_sixty_five">46-65 yrs Old</string>
    <string name="sixty_six_plus">Over 66 yrs Old</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="fingerprint">Enrol Fingerprints</string>
    <string name="household_breakdown">Household Breakdown</string>
    <string name="right_thumb">Right Thumb</string>
    <string name="right_index">Right Index</string>
    <string name="right_middle">Right Middle</string>
    <string name="right_ring">Right Ring</string>
    <string name="right_little">Right Little</string>
    <string name="left_thumb">Left Thumb</string>
    <string name="left_index">Left Index</string>
    <string name="left_middle">Left Middle</string>
    <string name="left_ring">Left Ring</string>
    <string name="left_little">Left Little</string>
    <string name="county">County</string>
    <string name="state">State</string>
    <string name="payam">Payam</string>
    <string name="boma">Boma</string>
    <string name="complete_registration">Review and Complete Registration</string>
    <string name="reg_alternate">Register Alternate</string>
    <string name="alternate_name">Alternate Name</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="enrolment_number">Enrolment Number</string>
    <string name="verify_fingerprint">Verify Fingerprint</string>
    <string name="btn_scan">Scan QR Code</string>
    <string name="amount">Amount</string>
    <string name="trans_id">Transaction Number</string>
    <string name="status">Status</string>
    <string name="title_activity_report">Reports</string>
    <string name="search">Search</string>
    <string name="payment_centre">Payment Centre</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="btn_payment_set_up">Save Payment Setups</string>
    <string name="payment_batches">Payment Batches (Cycles)</string>
    <string name="payment_verification">Payment Verification</string>
    <string name="payment_reader">QRCode Reader</string>
    <string name="payment_ben_list">Payment Beneficiaries List</string>
    <string name="alt_fp">Alternate Fingerprints</string>
    <string name="alternate_reg">Register Alternate</string>
    <string name="alternate_households">Choose Household</string>
    <string name="selection_reason">Selection Reason</string>
    <string-array name="selection_criteria">
        <item>Select Component</item>
        <item>Component 2 (Direct Income Support)</item>
    </string-array>
    <string name="payment_setup">Setup Payments</string>
    <string name="edit_households">Edit Households</string>
    <string name="edit_alternate">Edit Alternate</string>
    <string name="payment_households">Payment Households</string>
    <string name="noAccessToDevice">Warning: cannot connect to fingerprint sensor.\n\nPlease open item \"Peripheral Management\" in this application main menu and check following settings :\n\t- Fingerprint sensor should be enabled\n\t- USB mode should be set to "Host". Or it should be set to "Auto" and PC shouldn\'t be connected to tablet.\n\nPlease also check that no other fingerprint sensor is connected to tablet.
    </string>
    <string-array name="legality">
        <item>Select Legal Status</item>
        <item>Host Community</item>
        <item>IDP</item>
        <item>Refugee</item>
        <item>Returnee</item>
    </string-array>
    <string-array name="marital">
        <item>Select Marital Status</item>
        <item>Married</item>
        <item>Single</item>
        <item>Widow</item>
        <item>Separated</item>
    </string-array>
    <string-array name="relationship">
        <item>Select Alternate Relationship</item>
        <item>Spouse</item>
        <item>Son</item>
        <item>Daughter</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Others</item>
    </string-array>
    <string-array name="dis">
        <item>Select Criteria (DIS)</item>
        <item>Child-headed households with no alternate income support</item>
        <item>Elderly-headed household lacking alternate income support and able bodied member</item>
        <item>Persons with disability headed household lacking alternate income support and able bodied member</item>
        <item>Chronically ill headed household lacking alternate income and able bodied member</item>
        <item>Female-headed household lacking alternate income support and able-bodied member</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>