<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".households.ReviewActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/state"
            app:layout_constraintEnd_toStartOf="@+id/tvCounty"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCounty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/county"
            app:layout_constraintEnd_toStartOf="@+id/tvPayam"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvState"
            app:layout_constraintTop_toTopOf="@+id/tvState" />

        <TextView
            android:id="@+id/tvPayam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/payam"
            app:layout_constraintEnd_toStartOf="@+id/tvBoma"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvCounty"
            app:layout_constraintTop_toTopOf="@+id/tvCounty" />

        <TextView
            android:id="@+id/tvBoma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/boma"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPayam"
            app:layout_constraintTop_toTopOf="@+id/tvPayam" />


        <TextView
            android:id="@+id/tvHouseholdName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/household_name"
            app:layout_constraintEnd_toStartOf="@+id/tvAge"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tvState"
            app:layout_constraintTop_toBottomOf="@+id/tvState" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/age"
            app:layout_constraintEnd_toStartOf="@+id/tvIdNo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvHouseholdName"
            app:layout_constraintTop_toTopOf="@+id/tvHouseholdName" />

        <TextView
            android:id="@+id/tvIdNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/id_no"
            app:layout_constraintEnd_toStartOf="@+id/tvPhonenumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvAge"
            app:layout_constraintTop_toTopOf="@+id/tvAge" />

        <TextView
            android:id="@+id/tvPhonenumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/phonenumber"
            app:layout_constraintEnd_toEndOf="@+id/tvBoma"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvIdNo"
            app:layout_constraintTop_toTopOf="@+id/tvIdNo" />

        <TextView
            android:id="@+id/tvIncomeSource"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/start_work"
            app:layout_constraintEnd_toStartOf="@+id/tvAverageIncome"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tvHouseholdName"
            app:layout_constraintTop_toBottomOf="@+id/tvHouseholdName" />

        <TextView
            android:id="@+id/tvAverageIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/average_income"
            app:layout_constraintEnd_toStartOf="@+id/tvLegalStatus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvIncomeSource"
            app:layout_constraintTop_toTopOf="@+id/tvIncomeSource" />

        <TextView
            android:id="@+id/tvLegalStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/legal_status"
            app:layout_constraintEnd_toStartOf="@+id/tvSex"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvAverageIncome"
            app:layout_constraintTop_toTopOf="@+id/tvAverageIncome" />

        <TextView
            android:id="@+id/tvSex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/gender"
            app:layout_constraintEnd_toEndOf="@+id/tvPhonenumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvLegalStatus"
            app:layout_constraintTop_toTopOf="@+id/tvLegalStatus" />


        <TextView
            android:id="@+id/tvMaritalStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/marital_status"
            app:layout_constraintEnd_toStartOf="@+id/tvSpouseName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tvIncomeSource"
            app:layout_constraintTop_toBottomOf="@+id/tvIncomeSource" />

        <TextView
            android:id="@+id/tvSpouseName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/spouse"
            app:layout_constraintEnd_toStartOf="@+id/tvHouseholdSize"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvMaritalStatus"
            app:layout_constraintTop_toTopOf="@+id/tvMaritalStatus" />

        <TextView
            android:id="@+id/tvHouseholdSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/household_size"
            app:layout_constraintEnd_toStartOf="@+id/tvMaleDependants"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvSpouseName"
            app:layout_constraintTop_toTopOf="@+id/tvSpouseName" />

        <TextView
            android:id="@+id/tvMaleDependants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/male_dependants"
            app:layout_constraintEnd_toEndOf="@+id/tvSex"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvHouseholdSize"
            app:layout_constraintTop_toTopOf="@+id/tvHouseholdSize" />


        <TextView
            android:id="@+id/tvFemaleDependants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/female_dependants"
            app:layout_constraintEnd_toStartOf="@+id/tvZeroFive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tvMaritalStatus"
            app:layout_constraintTop_toBottomOf="@+id/tvMaritalStatus" />

        <TextView
            android:id="@+id/tvZeroFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/zero_five"
            app:layout_constraintEnd_toStartOf="@+id/tvSixSeventeen"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvFemaleDependants"
            app:layout_constraintTop_toTopOf="@+id/tvFemaleDependants" />

        <TextView
            android:id="@+id/tvSixSeventeen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/six_seventeen"
            app:layout_constraintEnd_toStartOf="@+id/tvEighteenFortyFive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvZeroFive"
            app:layout_constraintTop_toTopOf="@+id/tvZeroFive" />

        <TextView
            android:id="@+id/tvEighteenFortyFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/eighteen_forty_five"
            app:layout_constraintEnd_toEndOf="@+id/tvMaleDependants"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvSixSeventeen"
            app:layout_constraintTop_toTopOf="@+id/tvSixSeventeen" />


        <TextView
            android:id="@+id/tvFortyFiveSixtyFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/forty_six_sixty_five"
            app:layout_constraintEnd_toStartOf="@+id/tvSixtySixPlus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFemaleDependants" />

        <TextView
            android:id="@+id/tvSixtySixPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/sixty_six_plus"
            app:layout_constraintEnd_toStartOf="@+id/tvSelectionCriteria"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvFortyFiveSixtyFive"
            app:layout_constraintTop_toTopOf="@+id/tvFortyFiveSixtyFive" />

        <TextView
            android:id="@+id/tvSelectionCriteria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/selection_criteria"
            app:layout_constraintEnd_toStartOf="@+id/tvSelectionReason"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvSixtySixPlus"
            app:layout_constraintTop_toTopOf="@+id/tvSixtySixPlus" />

        <TextView
            android:id="@+id/tvSelectionReason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="4"
            android:singleLine="false"
            android:text="@string/selection_reason"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvSelectionCriteria"
            app:layout_constraintTop_toTopOf="@+id/tvSelectionCriteria" />


        <ImageView
            android:id="@+id/ivReviewPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/households"
            app:layout_constraintStart_toStartOf="@+id/tvFortyFiveSixtyFive"
            app:layout_constraintTop_toBottomOf="@+id/tvFortyFiveSixtyFive"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/tvFingerprints"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="10"
            android:singleLine="false"
            android:text="@string/fingerprint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivReviewPhoto"
            app:layout_constraintTop_toTopOf="@+id/ivReviewPhoto" />

        <Button
            android:id="@+id/btnReviewHousehold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#1B5E20"
            android:text="@string/complete_registration"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnReviewBack"
            app:layout_constraintTop_toBottomOf="@+id/ivReviewPhoto" />

        <Button
            android:id="@+id/btnReviewBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="#B71C1C"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btnReviewHousehold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivReviewPhoto" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>